<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gov.espressotest.HomeActivity">

    <Button
        android:id="@+id/next_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next Activity" />

    <Button
        android:id="@+id/change_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Text" />

    <EditText
        android:id="@+id/enter_text_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter text here to reflect on text view" />

    <TextView
        android:id="@+id/information_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This text will be changed on button click" />
</LinearLayout>
